# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/jeffersonborges/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List Opening
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func LitsOpeningsHanlder(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
